# mealplanner

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.sample  pyproject.toml  template.yaml
hello-world/: main.go
mealplanner/: api.py  app.py  db.py  forms.py  models.py  routes.py  uuid_type.py  wsgi.py
mealplanner/routes/: ingredients.py  recipe.py  recipes.py
mealplanner/services/: allocation_service.py  ingredient_service.py  recipe_service.py
mealplanner/static/js/: new-assignment.js  new-recipe.js
mealplanner/templates/: _ingredient_form.html  _new_allocation.html  base.html  ingredient.html  ingredients.html  new-allocation.html  new-ingredients.html  new-recipe.html  planner.html  recipe.html  recipes.html  shopping-list.html
migrations/: env.py
migrations/versions/: 0d13c9c8d962_.py  45ff5de91f9e_.py  57688a7ca9ed_.py  667d932dde3f_.py  92c9847fdcb6_.py  b582eec973b2_.py
openfoodfactstesting/: app.py  pyproject.toml
openfoodfactstesting/templates/: index.html  results.html
tests/: conftest.py  test_allocation_service.py  test_models.py  test_planner.py  test_recipe_service.py
tests/routes/: test_ingredients.py  test_recipe.py  test_recipes.py
