[tool.poetry]
name = "mealplanner"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
Flask-RESTful = "^0.3.8"
marshmallow = "^3.11.1"
gunicorn = "^20.1.0"
SQLAlchemy = "^1.4.9"
Flask-Migrate = "^2.7.0"
Flask-SQLAlchemy = "^2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
pytest-pudb = "^0.7.0"
ipython = "^7.22.0"
pytest-mock = "^3.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
